--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "emotion": "^9.1.3",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.2",
