--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.2",
     "react-emotion": "^9.1.3",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.80.0"
